[package]
name = "hydro-template"
publish = false
version = "0.0.0"
edition = "2024"

[dependencies]
hydro_lang = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}" }
hydro_std = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}" }
stageleft = "0.9.0"

[build-dependencies]
stageleft_tool = "0.9.0"

[dev-dependencies]
ctor = "0.2"
hydro_deploy = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}" }
hydro_lang = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}", features = [
    "deploy",
] }
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1.3", default-features = false }
futures = "0.3.0"

[lints.clippy]
uninlined_format_args = "allow"
